Relizado el CRUD de Gabinete

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@
 spring.datasource.url=jdbc:mariadb://localhost:3306/superarte_db
 spring.datasource.username=root
 spring.datasource.password=1234
+
+# Configuración de seguridad para permitir acceso público a ciertas rutas
+# spring.security.ignored=/**
